termine el diseño de la pagina

--- a/style.css
+++ b/style.css
@@ -19,9 +19,6 @@ body{
     align-items: center;
 }
 
-.foto{
-    width: 200px;
-}
 
 .circulo-fondo{
     position: absolute;
@@ -31,4 +28,90 @@ body{
     background-color: #ff6c99;
     width: 80%;
     border-radius: 50%;
+}
+
+.contenedor{
+    width: 80%;
+    height: 75%;
+    background-color: #f2f5ff;
+    border-radius: 40px;
+    z-index: 10;
+    display: flex;
+    overflow: hidden;
+}
+
+.contenedor .col1{
+    width: 50%;
+    height: 100%;
+    background: linear-gradient(#73b4f2, #4773ff);
+    border-radius: 40px;
+    padding: 20px 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    color: #fff;
+}
+
+.contenedor .col1 img{
+    max-width: 200px;
+}
+
+.contenedor .col2{
+    height: 100%;
+    width: 50%;
+}
+
+.contenedor .col2 .info{
+    max-width: 400px;
+    margin: 30px auto 0 auto;
+}
+
+.contenedor .col2 .contenedor-form{
+    background-color: #f8f8f8;
+    border-radius: 20px;
+}
+
+.contenedor .col2 .contenedor-form form{
+    background: #fff;
+    padding: 20px 50px;
+    box-shadow: 0 0 10px 2px rgba(139, 139, 139, .3);
+    border-radius: 30px;
+}
+
+.contenedor .col2 .contenedor-form form .entrada{
+    margin-bottom: 30px;
+}
+
+.contenedor .col2 .contenedor-form form .entrada label{
+    display: block;
+    margin-bottom: 5px;
+    color: #73b4f2;
+}
+
+.contenedor .col2 .contenedor-form form .entrada input{
+    width: 100%;
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid #808080;
+    font-size: 15px;
+    outline: none;
+    color: #808080;
+}
+
+.contenedor .col2 .contenedor-form form button{ 
+    display: block;
+    width: 100%;
+    border: none;
+    background-color: #4773ff;
+    color: #fff;
+    padding: 5px;
+    font-size: 18px;
+    border-radius: 10px;
+    transition: .4s;
+    cursor: pointer;
+}
+
+.contenedor .col2 .contenedor-form form button:hover{
+    background-color: #1943ce;
 }
